force-app/main/default/objects/Quote/fields/Custom_Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dropbox_Path__c</fullName>
    <formula>&apos;Accounts/&apos; + Opportunity.Account_Name__c + &apos;/Opportunities/&apos; + RIGHT(TEXT(YEAR(Opportunity.CloseDate)),2) + IF((MONTH(Opportunity.CloseDate) &lt; 10), &apos;0&apos; + TEXT(MONTH(Opportunity.CloseDate)), TEXT(MONTH(Opportunity.CloseDate))) + IF((DAY(Opportunity.CloseDate) &lt; 10), &apos;0&apos; + TEXT(DAY(Opportunity.CloseDate)), TEXT(DAY(Opportunity.CloseDate))) + &apos; - &apos; + SUBSTITUTE(Opportunity.Name, Opportunity.Account_Name__c + &apos; - &apos;, &apos;&apos;) + &apos;/&apos; + RIGHT(TEXT(YEAR(ExpirationDate)),2) + IF((MONTH(ExpirationDate) &lt; 10), &apos;0&apos; + TEXT(MONTH(ExpirationDate)), TEXT(MONTH(ExpirationDate))) + IF((DAY(ExpirationDate) &lt; 10), &apos;0&apos; + TEXT(DAY(ExpirationDate)), TEXT(DAY(ExpirationDate))) + &apos; - &apos; + QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dropbox Path</label>
    <type>Text</type>
</CustomField>