force-app/main/default/objects/Quote/fields/Grand_Total1__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total1__c</fullName>
    <formula>Total_Price1__c + VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>