force-app/main/default/objects/Quote/fields/Monthly_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subtotal__c</fullName>
    <label>Monthly Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>