force-app/main/default/objects/Quote/fields/Monthly_Total__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Total__c</fullName>
    <label>Monthly Total</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>