force-app/main/default/objects/Quote/fields/Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact__c</fullName>
    <formula>Contact.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Contact</label>
    <type>Text</type>
</CustomField>