force-app/main/default/objects/Quote/fields/Total_Price1__c.field-meta.xml
<CustomField>
    <fullName>Total_Price1__c</fullName>
    <formula>Subtotal + ShippingHandling</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>